--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>A-Frame test</title>
-    <meta name="description" content="A-Frame _-_ test">
+    <title>Podium Tower</title>
+    <meta name="description" content="Podium Tower">
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
   </head>
   <body>
@@ -14,7 +14,7 @@
         </a-assets>
         <a-sky rotation="0 90 0" src="#sky"></a-sky>
         <!-- wasd-controls='acceleration: 500%; fly: false' -->
-        <a-entity material="side: double" rotation="270 227 0" scale="1.5 1.5 1.5" position="0 -8 -60" gltf-model="#test" wasd-controls='enabled: false'></a-entity>
+        <a-entity rotation="270 228 0" position="0 -1.2 0" scale="1.0 1.0 1.0" gltf-model="#test"></a-entity>
     </a-scene>
   </body>
 </html>
