--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <a-scene>
+        <a-camera wasd-controls="enabled:false"></a-camera>
         <a-assets>
             <a-asset-item id="test" src="assets/Podium_tower_options_photo.gltf"></a-asset-item>
             <img id="sky" src="assets/Street View 360_1.jpg" crossorigin="anonymous">
