--- a/podium_tower_options.html
+++ b/podium_tower_options.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <a-scene>
+        <a-camera wasd-controls="enabled:false"></a-camera>
         <a-assets>
             <a-asset-item id="test" src="https://raw.githubusercontent.com/design-automation/mobius-vr/master/assets/Podium_tower_options_photo.gltf"></a-asset-item>
             <img id="sky" src="https://raw.githubusercontent.com/design-automation/mobius-vr/master/assets/Street View 360_1.jpg" crossorigin="anonymous">
